WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58583
WebKit2: Password field input does not switch to ASCII-compatible source
https://bugs.webkit.org/show_bug.cgi?id=58583
Summary
WebKit2: Password field input does not switch to ASCII-compatible source
Alexey Proskuryakov
Reported
2011-04-14 15:17:24 PDT
And it also doesn't enable secure event mode.
Attachments
proposed fix
(22.94 KB, patch)
2011-04-14 17:10 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
updated fix
(23.00 KB, patch)
2011-04-15 10:43 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
also trying to fix chromium build
(23.01 KB, patch)
2011-04-15 10:49 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-14 15:17:39 PDT
<
rdar://problem/9059651
>
Alexey Proskuryakov
Comment 2
2011-04-14 17:10:44 PDT
Created
attachment 89690
[details]
proposed fix
Build Bot
Comment 3
2011-04-14 18:37:16 PDT
Attachment 89690
[details]
did not build on win: Build output:
http://queues.webkit.org/results/8442008
WebKit Review Bot
Comment 4
2011-04-15 02:00:30 PDT
Attachment 89690
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8452094
mitz
Comment 5
2011-04-15 09:30:59 PDT
Comment on
attachment 89690
[details]
proposed fix Looks okay but breaks some builds.
Alexey Proskuryakov
Comment 6
2011-04-15 10:43:14 PDT
Created
attachment 89808
[details]
updated fix Mitz pointed out that WebPageProxy::selectionStateChanged() was wrong. I couldn't find any effect in testing, but it was wrong indeed.
Alexey Proskuryakov
Comment 7
2011-04-15 10:49:26 PDT
Created
attachment 89811
[details]
also trying to fix chromium build Not sure why it failed, EWS doesn't save enough context, and doesn't stop the build after a failure (boo!).
Alexey Proskuryakov
Comment 8
2011-04-15 11:39:09 PDT
Committed <
http://trac.webkit.org/changeset/83997
>.
WebKit Review Bot
Comment 9
2011-04-15 18:19:09 PDT
http://trac.webkit.org/changeset/83997
might have broken GTK Linux 32-bit Debug The following tests are not passing: svg/W3C-SVG-1.1/animate-elem-82-t.svg
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug