        Reviewed by Dan Bernstein.

WebKit2: Password field input does not switch to ASCII-compatible source
        https://bugs.webkit.org/show_bug.cgi?id=58583
        <rdar://problem/9059651>

        The implementation is more modern than what we have in WK1. Instead of returning a null
        input context (as in non-editable content), we now set page context's properties.



Canonical link: https://commits.webkit.org/73750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83997 268f45cc-cd09-0410-ab3c-d52691b4dbfc