Source/WebCore/platform/SecureTextInput.cpp
@@ -10,49 +10,34 @@
  *    notice, this list of conditions and the following disclaimer in the
  *    documentation and/or other materials provided with the distribution.
  *
- * THIS SOFTWARE IS PROVIDED BY APPLE COMPUTER, INC. ``AS IS'' AND ANY
- * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
- * PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL APPLE COMPUTER, INC. OR
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
- * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
- * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
- * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
- * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
+ * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+ * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL APPLE INC. OR ITS CONTRIBUTORS
+ * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
+ * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #include "config.h"
+
+// FIXME: This should be moved to WebKit, because browser process needs to track secure input state anyway to manipulate input contexts.
+#if PLATFORM(CHROMIUM) && OS(DARWIN)
 #include "SecureTextInput.h"
 
-#if USE(CARBON_SECURE_INPUT_MODE)
 #import <Carbon/Carbon.h>
-#endif
 
 namespace WebCore {
-
-#if USE(CARBON_SECURE_INPUT_MODE)
-
-#ifdef BUILDING_ON_TIGER
-const short enableRomanKeyboardsOnly = -23;
-#endif
 
 void enableSecureTextInput()
 {
     if (IsSecureEventInputEnabled())
         return;
     EnableSecureEventInput();
-#ifdef BUILDING_ON_TIGER
-    KeyScript(enableRomanKeyboardsOnly);
-#else
-    // WebKit substitutes nil for input context when in password field, which corresponds to null TSMDocument. So, there is
-    // no need to call TSMGetActiveDocument(), which may return an incorrect result when selection hasn't been yet updated
-    // after focusing a node.
-    CFArrayRef inputSources = TISCreateASCIICapableInputSourceList();
-    TSMSetDocumentProperty(0, kTSMDocumentEnabledInputSourcesPropertyTag, sizeof(CFArrayRef), &inputSources);
-    CFRelease(inputSources);
-#endif
 }
 
 void disableSecureTextInput()
@@ -60,13 +45,8 @@ void disableSecureTextInput()
     if (!IsSecureEventInputEnabled())
         return;
     DisableSecureEventInput();
-#ifdef BUILDING_ON_TIGER
-    KeyScript(smKeyEnableKybds);
-#else
-    TSMRemoveDocumentProperty(0, kTSMDocumentEnabledInputSourcesPropertyTag);
-#endif
 }
 
-#endif // USE(CARBON_SECURE_INPUT_MODE)
-
 } // namespace WebCore
+
+#endif // PLATFORM(CHROMIUM) && OS(DARWIN)
